package operate

import (
	"context"

	"github.com/entrehuihui/grpa-gateway-complete2/service/myrpc/proto"
)

// GetRole 列表
func GetRole(ctx context.Context, in *proto.GetRoleReq) (*proto.GetRoleResp, error) {
	return nil, nil
}

// GetRole 添加
func PostRole(ctx context.Context, in *proto.PostRoleReq) (*proto.PostRoleResp, error) {
	return nil, nil
}

// GetRole 修改
func PutRole(ctx context.Context, in *proto.PutRoleReq) (*proto.PutRoleResp, error) {
	return nil, nil
}

// GetRole 列表
func GetRoleAuth(ctx context.Context, in *proto.GetRoleAuthReq) (*proto.GetRoleAuthResp, error) {
	return nil, nil
}
